// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.graphql - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @prettier

query Browse($offset:Int){browse(offset:$offset)}

=====================================output=====================================
# @prettier

query Browse($offset: Int) {
  browse(offset: $offset)
}

================================================================================
`;

exports[`without-pragma.graphql - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
query Browse($offset:Int){browse(offset:$offset)}

=====================================output=====================================
# @format

query Browse($offset: Int) {
  browse(offset: $offset)
}

================================================================================
`;
